fix social foot cc color on small screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -245,7 +245,7 @@ p, a, {
   display: inline;
   margin: 0 auto;
   font-size: 3em;
-  color: #9EADA3;
+  color: white;
 }
 @media screen and (max-width: 768px) {
   .social-foot-cc {
@@ -263,7 +263,6 @@ p, a, {
 #mail-foot {
 }
 #cc-foot {
-  color: white;
 }
 #cc-foot:hover {
   color: #4e647c;
